# EDASkel

./: CMakeLists.txt  README
analysis/: CMakeLists.txt  mna.hpp  prima.hpp
analysis/parasitics/: CMakeLists.txt  coupling.cir  coupling_eigen_odeint.cpp  coupling_odeint.cpp  coupling_prima_eigen_odeint.cpp  coupling_sprim_eigen_odeint.cpp  rlc_eigen_odeint.cpp  rlc_odeint.cpp  rlc_prima_eigen_odeint.cpp
analysis/tests/: CMakeLists.txt  mor.cpp
apps/: CMakeLists.txt  load_spef.cpp  simple_viewer.cpp
db/: CMakeLists.txt  globals.h  simpledb.h
gui/: CMakeLists.txt  designscene.h  designview.h
gui/tests/: CMakeLists.txt  basic.cpp
parser/: CMakeLists.txt  defparser.h  defparser.hpp  defsem.h  defsem.hpp  deftypes.h  first_parser.cpp  keyword.h  lefdef.cpp  lefdef.h  lefparser.h  lefsem.h  lefsem.hpp  leftypes.h  spefparser.hpp  speftypes.h  testgrammar.h
parser/tests/: CMakeLists.txt  basic.cpp  lefbasic.cpp  semantic.cpp  spefbasic.cpp
tclint/: CMakeLists.txt  qttclnotifier.cpp  qttclnotifier.h
