add_executable ( basic basic.cpp )
target_link_libraries( basic lefdef )
add_test( DEFBasic basic )
add_executable ( lefbasic lefbasic.cpp )
target_link_libraries( lefbasic lefdef )
add_test( LEFBasic lefbasic )
add_executable ( semantic semantic.cpp )
target_link_libraries( semantic lefdef )
add_test( Semantics semantic )
